--- a/index.html
+++ b/index.html
@@ -1,8 +1,38 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Portfolio</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+        <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
+        <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
     </head>
     <body>
-        <h1>Hello World</h1>
+        <header>
+            <div class="container">
+                <ul class="nav justify-content-center">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html"><i class="ri-home-line"></i></a>
+                    </li>
+                    <li class="nav-item">
+                        
+                        <a class="nav-link" href="#"><i class="ri-apps-line"></i></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#"><i class="ri-user-line"></i></a>
+                    </li>
+                </ul>
+            </div>
+        </header>
+
+        <div>
+            
+         </div>
+
+        <footer>
+
+        </footer>
     </body>
 </html>
+
