--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
                 <div class="container">
                     <ul class="nav justify-content-center">
                         <li class="nav-item">
-                            <a class="nav-link" href="index.html"><i class="ri-home-line"></i></a>
+                            <a class="nav-link" href="#homeid"><i class="ri-home-line"></i></a>
                         </li>
                         <li class="nav-item">
                             
-                            <a class="nav-link" href="#"><i class="ri-apps-line"></i></a>
+                            <a class="nav-link" href="#secondSection"><i class="ri-apps-line"></i></a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#"><i class="ri-user-line"></i></a>
@@ -30,8 +30,12 @@
 
 
             <div>
-                <div class="container section">
+                <div class="container section" id="homeid">
 
+                </div>
+
+                <div class="container section" id="secondSection">
+                    
                 </div>
 
                 <div class="container section">
